--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,14 +2,14 @@
   <h1>Time Tracker</h1>
 </div>
 <ul class="custom-nav nav nav-tabs">
-  <li class="nav-item">
+  <li class="nav-item <%= active?(root_path) %>">
     <%= link_to "Home", root_path %>
   </li>
-  <li class="nav-item">
+  <li class="nav-item <%= active?(posts_path) %>">
     <%= link_to "Time Entries", posts_path %>
   </li>
 
-  <li class="nav-item dropdown ml-md-auto">
+  <li class="nav-item dropdown ml-md-auto ">
      <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Account</a>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 
