--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts</h1>
 
-<% @posts.each do |post| %>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -19,20 +19,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>
-        <%= post.id %>
-      </td>
-      <td>
-        <%= post.date %>
-      </td>
-      <td>
-        <%= post.user.last_name %>
-      </td>
-      <td>
-        <%= truncate(post.rationale) %>
-      </td>
-    </tr>
-    <% end %>
+    <%= render @posts %>
   </tbody>
 </table>
