--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,7 @@
         </div>
       </div>
     </div>
+    <%= js add_gritter(flash[:notice], title: "Overtime Notification", sticky: false, image: :notice)%>
+
   </body>
 </html>
