--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, class:"form-horizontal" do |f| %>
+<%= form_for @post, class:"form" do |f| %>
 
 	<% if @post.errors.any? %>
 		<% @post.errors.full_messages.each do |error| %>
