--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,8 +14,10 @@
   <li class="nav-item dropdown ml-md-auto ">
      <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Account</a>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+      
+          <%= link_to "TODO: Admin dashboard", root_path %>
 
-      <%= link_to "Edit details", edit_user_registration_path %>
+
       <div class="dropdown-divider">
       </div>
       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
